--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,104 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+}
+.image_gallery{
+  display: inline-block;
+  width: 100%;
+  margin: 10px auto;
+}
+.image_gallery >h1{
   text-align: center;
-}
+  font-family: sans-serif;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.image_container{
+  width: 70%;
+  margin: 20px auto;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.image_container >img{
+  width: 33%;
+  height: 200px;
+  object-fit: cover;
+  object-position: center;
+}
+.image_container >img:hover{
+  cursor: pointer;
+}
+.slider_wrapper{
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0,0,0,0.6);
+  height: 100vh;
+  width: 100%;
+}
+.sliding_area{
+  position: absolute;
+  width: 60%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 60vh;
+  background-color: white;
+}
+.sliding_area >img{
+  position: absolute;
+  top: -50px;
+  right: -10px;
+  width: 30px;
+}
+.slider_section{
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+}
+.slider_section >img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.left_arrow{
+  position: absolute;
+  top: 50%;
+  left: -60px;
+  transform: translateY(-50%);
+}
+.left_arrow >img, .right_arrow>img{
+  width: 50px;
+}
+.right_arrow{
+  position: absolute;
+  top: 50%;
+  right: -60px;
+  transform: translateY(-50%);
+}
+.sliding_area >img:hover,.left_arrow >img:hover,.right_arrow>img:hover{
+  cursor: pointer;
+}
+.auto_sliding_checkbox{
+  position: absolute;
+  right: 21px;
+  top: -27px;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.body_set_overflow_class{
+  overflow: hidden;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 768px) {
+  .image_container {
+    width: 85%;
   }
-  to {
-    transform: rotate(360deg);
+  .sliding_area {
+    width: 80%;
+    height: 40vh;
+  }
+}
+@media screen and (max-width: 480px) {
+  .image_container >img {
+    width: 50%;
   }
 }
